--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Download macOS</title>
+</head>
+<body>
+    <center><h1>Download macOS</h1></center>
+    <center><h2>Direct downloads</h2></center>
+    <br>
+    <br>
+    <h3>App Store</h3>
+    <p>These versions of macOS require you to go to the App Store to download macOS.</p>
+    <a href="macappstores://apps.apple.com/app/macos-ventura/id1638787999?mt=12">macOS Ventura 13</a>
+    <a href="macappstores://apps.apple.com/app/macos-monterey/id1576738294?mt=12">macOS Monterey 12</a>
+    <a href="macappstores://apps.apple.com/app/macos-big-sur/id1526878132?mt=12">macOS Big Sur 11</a>
+    <a href="macappstores://apps.apple.com/app/macos-catalina/id1466841314?mt=12">macOS Catalina 10.15</a>
+    <a href="macappstores://apps.apple.com/app/macos-mojave/id1398502828?mt=12">macOS Mojave 10.14</a>
+    <a href="macappstores://apps.apple.com/app/macos-high-sierra/id1246284741?mt=12">macOS High Sierra 10.13</a>
+    <br>
+    <h3>DMG</h3>
+    <p>These versions allow you to download macOS directly in the form of a DMG.</p>
+    <a href="http://updates-http.cdn-apple.com/2019/cert/061-39476-20191023-48f365f4-0015-4c41-9f44-39d3d2aca067/InstallOS.dmg">macOS Sierra 10.12</a>
+    <a href="http://updates-http.cdn-apple.com/2019/cert/061-41424-20191024-218af9ec-cf50-4516-9011-228c78eda3d2/InstallMacOSX.dmg">OS X El Capitan 10.11</a>
+    <a href="http://updates-http.cdn-apple.com/2019/cert/061-41343-20191023-02465f92-3ab5-4c92-bfe2-b725447a070d/InstallMacOSX.dmg">OS X Yosemite 10.10</a>
+    <a href="https://updates.cdn-apple.com/2021/macos/031-0627-20210614-90D11F33-1A65-42DD-BBEA-E1D9F43A6B3F/InstallMacOSX.dmg">OS X Mountain Lion 10.9</a>
+    <a href="https://updates.cdn-apple.com/2021/macos/041-7683-20210614-E610947E-C7CE-46EB-8860-D26D71F0D3EA/InstallMacOSX.dmg">OS X Lion 10.8</a>
+</body>
+</html>
