--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <br>
     <a href="https://updates.cdn-apple.com/2021/macos/041-7683-20210614-E610947E-C7CE-46EB-8860-D26D71F0D3EA/InstallMacOSX.dmg">OS X Lion 10.7</a>
     <br>
+    <a href="https://download.info.apple.com/Mac_OS_X/041-2001.20110808.QFC1d/RecoveryDiskAssistant.dmg">OS X Recovery Disk Assistant v1.0</a>
 </body>
 </html>
