--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download macOS</title>
 </head>
+<style>
+body {
+  background-image: url("linen.png");
+  background-repeat: repeat-xy;
+}
+</style>
 <body>
     <center><h1>Download macOS</h1></center>
     <center><h2>Direct downloads</h2></center>
