--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ body {
   background-image: url("linen.png");
   background-repeat: repeat-xy;
 }
+h1, h2, h3, p {
+  color: white;
+}
 </style>
 <body>
     <center><h1>Download macOS</h1></center>
