--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
 }
 h1, h2, h3, p, a {
   color: white;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif; 
 }
 </style>
 <body>
