--- a/index.html
+++ b/index.html
@@ -50,5 +50,33 @@ h1, h2, h3, p, a {
     <a href="https://updates.cdn-apple.com/2021/macos/041-7683-20210614-E610947E-C7CE-46EB-8860-D26D71F0D3EA/InstallMacOSX.dmg">OS X Lion 10.7</a>
     <br>
     <a href="https://download.info.apple.com/Mac_OS_X/041-2001.20110808.QFC1d/RecoveryDiskAssistant.dmg">OS X Recovery Disk Assistant v1.0</a>
+    <br>
+    <br>
+    <br>
+    <h3>Internet Recovery DMG</h3>
+    <p>These versions are great for quick changes like partitioning. They are lightweight and can be flashed with Disk Utility</p>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Ventura/BaseSystem.dmg">macOS Ventura 13</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Monterey/BaseSystem.dmg">macOS Monterey 12</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Big%20Sur/BaseSystem.dmg">macOS Big Sur 11</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Catalina/BaseSystem.dmg">macOS Catalina 10.15</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Mojave/BaseSystem.dmg">macOS Mojave 10.14</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/High%20Sierra/BaseSystem.dmg">macOS High Sierra 10.13</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Sierra/RecoveryImage.dmg">macOS Sierra 10.12</a>
+    <br>
+    <a href="#">OS X El Capitan 10.11 NOT DONE</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Yosemite/RecoveryImage.dmg">OS X Yosemite 10.10</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Mavericks/RecoveryImage.dmg">OS X Mavericks 10.9</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Mountain%20Lion/RecoveryImage.dmg">OS X Mountain Lion 10.8</a>
+    <br>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Lion/RecoveryImage.dmg">OS X Recovery Disk Assistant v1.0</a>
 </body>
 </html>
