--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@ h1, h2, h3, p, a {
     <br>
     <a href="https://archive.org/download/macos-internet-recovery-images/Mountain%20Lion/RecoveryImage.dmg">OS X Mountain Lion 10.8</a>
     <br>
-    <a href="https://archive.org/download/macos-internet-recovery-images/Lion/RecoveryImage.dmg">OS X Recovery Disk Assistant v1.0</a>
+    <a href="https://archive.org/download/macos-internet-recovery-images/Lion/RecoveryImage.dmg">OS X Lion 10.7</a>
 </body>
 </html>
