--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ h1, h2, h3, p, a {
 }
 </style>
 <body>
-    <pre id="out"></pre>
     <center><h1>Download macOS</h1></center>
     <center><h2>Direct downloads</h2></center>
     <br>
@@ -87,7 +86,7 @@ var is_Mac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
 
 /* Output */
 var out = document.getElementById('out');
-if (!is_OSX) out.innerHTML += "This NOT a Mac or an iOS Device!";
+if (!is_OSX) location.href = "https://macos.fullpwn.net/unsupported"
 if (is_Mac) out.innerHTML += "This is a Mac Computer!\n";
 out.innerHTML += "\nPlatform: " + navigator.platform;
     </script>
