--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@ h1, h2, h3, p, a {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif; 
 }
+body {
+    display: none;
+    }
 </style>
-<body>
+    <script>
+var is_OSX = /(Mac)/i.test(navigator.platform);
+var is_Mac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
+
+/* Output */
+var displaybody = document.getElementById('content');
+if (!is_OSX) location.href = "https://macos.fullpwn.net/unsupported"
+if (is_Mac) displaybody.style.display = "block";
+    </script>
+<body id="content" class="contents">
     <center><h1>Download macOS</h1></center>
     <center><h2>Direct downloads</h2></center>
     <br>
@@ -78,17 +90,5 @@ h1, h2, h3, p, a {
     <a href="https://archive.org/download/macos-internet-recovery-images/Mountain%20Lion/RecoveryImage.dmg">OS X Mountain Lion 10.8</a>
     <br>
     <a href="https://archive.org/download/macos-internet-recovery-images/Lion/RecoveryImage.dmg">OS X Lion 10.7</a>
-    
-    
-    <script>
-var is_OSX = /(Mac)/i.test(navigator.platform);
-var is_Mac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
-
-/* Output */
-var out = document.getElementById('out');
-if (!is_OSX) location.href = "https://macos.fullpwn.net/unsupported"
-if (is_Mac) out.innerHTML += "This is a Mac Computer!\n";
-out.innerHTML += "\nPlatform: " + navigator.platform;
-    </script>
 </body>
 </html>
