--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download macOS</title>
+    <title>macOS Software Store</title>
 </head>
 <style>
 body {
@@ -29,8 +29,8 @@ if (!is_OSX) location.href = "https://macos.fullpwn.net/unsupported"
 if (is_Mac) displaybody.style.display = "block";
     </script>
 <body id="content" class="contents">
-    <center><h1>Download macOS</h1></center>
-    <center><h2>Direct downloads</h2></center>
+    <center><h1>macOS Software Store</h1></center>
+    <center><h2>Download macOS</h2></center>
     <br>
     <br>
     <h3>App Store</h3>
@@ -61,8 +61,6 @@ if (is_Mac) displaybody.style.display = "block";
     <br>
     <a href="https://updates.cdn-apple.com/2021/macos/041-7683-20210614-E610947E-C7CE-46EB-8860-D26D71F0D3EA/InstallMacOSX.dmg">OS X Lion 10.7</a>
     <br>
-    <a href="https://download.info.apple.com/Mac_OS_X/041-2001.20110808.QFC1d/RecoveryDiskAssistant.dmg">OS X Recovery Disk Assistant v1.0</a>
-    <br>
     <br>
     <br>
     <h3>Internet Recovery DMG</h3>
@@ -90,5 +88,7 @@ if (is_Mac) displaybody.style.display = "block";
     <a href="https://archive.org/download/macos-internet-recovery-images/Mountain%20Lion/RecoveryImage.dmg">OS X Mountain Lion 10.8</a>
     <br>
     <a href="https://archive.org/download/macos-internet-recovery-images/Lion/RecoveryImage.dmg">OS X Lion 10.7</a>
+    <center><h2>Tools</h2></center>
+    <a href="https://download.info.apple.com/Mac_OS_X/041-2001.20110808.QFC1d/RecoveryDiskAssistant.dmg">OS X Recovery Disk Assistant v1.0</a>
 </body>
 </html>
