--- a/unsupported.html
+++ b/unsupported.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download macOS</title>
+    <title>macOS Software Store</title>
 </head>
 <style>
 body {
@@ -17,7 +17,7 @@ h1, h2, h3, p, a {
 }
 </style>
 <body>
-    <center><h1>Download macOS</h1></center>
+    <center><h1>macOS Software Store</h1></center>
     <center><h2>Please visit this link on a Mac and try again.</h2></center>
     
 </body>
