--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ if (is_Mac) var displaybody = document.getElementById('content'); displaybody.st
     </script>
 <body id="content" class="contents">
     <center><h1>macOS Software Store</h1></center>
+    <h4>Welcome!</h4>
     <center><h2>Download macOS</h2></center>
     <br>
     <br>
