--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
   background-image: url("linen.png");
   background-repeat: repeat-xy;
 }
-h1, h2, h3, p, a {
+h1, h2, h3, h4, p, a {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif; 
 }
@@ -30,7 +30,7 @@ if (is_Mac) var displaybody = document.getElementById('content'); displaybody.st
     </script>
 <body id="content" class="contents">
     <center><h1>macOS Software Store</h1></center>
-    <h4>Welcome!</h4>
+    <center><h4>Welcome!</h4></center>
     <center><h2>Download macOS</h2></center>
     <br>
     <br>
