--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@ body {
     }
 </style>
     <script>
-var is_OSX = /(Mac)/i.test(navigator.platform);
-var is_Mac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
-
-/* Output */
-
-if (!is_OSX) location.href = "https://macos.fullpwn.net/unsupported"
-if (is_Mac) var displaybody = document.getElementById('content'); displaybody.style.display = "block";
+if (navigator.userAgent.indexOf('Mac OS X') != -1) {
+  var displaybody = document.getElementById('content'); displaybody.style.display = "block";
+} else {
+  location.href = "https://macos.fullpwn.net/unsupported"
+}
     </script>
 <body id="content" class="contents">
     <center><h1>macOS Software Store</h1></center>
